--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="css.cis3334.vogellasqldatabase.MainActivity">
 
+    <TextView
+        android:text="Enter Rating: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textViewRating" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_marginStart="20dp"
+        android:id="@+id/editTextRating"
+        android:layout_alignBaseline="@+id/textViewRating"
+        android:layout_alignBottom="@+id/textViewRating"
+        android:layout_toEndOf="@+id/textViewRating" />
+
     <LinearLayout
         android:id="@+id/group"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
 
         <Button
             android:id="@+id/add"
@@ -35,9 +55,10 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="13dp" />
+        android:layout_above="@+id/editTextRating" />
+
+
 
 </RelativeLayout>
 
