--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="css.cis3334.vogellasqldatabase.MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:text="Enter Rating: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textViewRating" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="44dp">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_marginStart="20dp"
-        android:id="@+id/editTextRating"
-        android:layout_alignBaseline="@+id/textViewRating"
-        android:layout_alignBottom="@+id/textViewRating"
-        android:layout_toEndOf="@+id/textViewRating" />
+        <TextView
+            android:text="Enter Rating: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/textViewRating" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:layout_marginStart="20dp"
+            android:id="@+id/editTextRating"
+            android:layout_alignBaseline="@+id/textViewRating"
+            android:layout_alignBottom="@+id/textViewRating"
+            android:layout_toEndOf="@+id/textViewRating" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/group"
@@ -51,14 +53,14 @@
 
     </LinearLayout>
 
+
+
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/editTextRating" />
+        android:layout_height="wrap_content" />
 
 
 
-</RelativeLayout>
+</LinearLayout>
 
